#-*- coding: utf-8-*-
[metadata]
name = nose2-cprof
author = Alain Péteut
author-email = alain.peteut@yahoo.com
descriptor-file = README.rst
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Operation System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
[files]
packages = nose2cprof
